pipelines/argocd-apps/platform-apps/managed/aa/components/website/base/deploy-website-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-api
  namespace: aa
spec:
  selector:
    matchLabels:
      app: aa
      component: website
      container: api
  replicas: 1
  template:
    metadata:
      labels:
        app: aa
        component: website
        container: api
    spec:
      containers:
        - name: api
          image: gcr.io//aa/website/main/api:latest
          imagePullPolicy: Always
          ports: 
            - containerPort: 8080
          
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
