pipelines/argocd-apps/platform-apps/managed/aa/components/website/base/svc-website-api-api.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: "website-api-api"
  namespace: aa
spec:
  selector:
    app: aa
    component: website
    container: api
  ports:
    - name: "api"
      protocol: "TCP"
      port: 8080
