pipelines/argocd-apps/platform-apps/managed/aa/components/website/base/svc-website-mongo-mongo.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: "website-mongo-mongo"
  namespace: aa
spec:
  selector:
    app: aa
    component: website
    container: mongo
  ports:
    - name: "mongo"
      protocol: "TCP"
      port: 27017
