pipelines/argocd-apps/platform-apps/managed/aa/components/website/base/svc-website-static-webserver.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: "website-static-webserver"
  namespace: aa
spec:
  selector:
    app: aa
    component: website
    container: static
  ports:
    - name: "webserver"
      protocol: "TCP"
      port: 80
